deployments/kubernetes/http-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector: {}  # Automatically populated by the commonLabels
  template:
    spec:
      containers:
        - name: http-server
          image: ghcr.io/cathy-go-learning/http-server:0.1.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          command:
            - ./http-server
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
      imagePullSecrets:
        - name: http-server-image-secret
      nodeSelector:
        kubernetes.io/arch: amd64
      terminationGracePeriodSeconds: 30
