deployments/kubernetes/http-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  ports:
    - port: 80
      targetPort: 8080
